--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,13 @@ body {
 img {
     width: 100px;
 }
+
+.hero {
+    background: url(./images/rfdDowntown.jpg);
+    margin: 0;
+}
+
+.activities {
+    display: flex;
+    flex-direction: column;
+}
