--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ img {
     background: url(./images/rfdDowntown.jpg);
     background-size: cover;
     padding: 10px 0 40px 0;
-    width: 500px;
+    width: 710px;
+    height: 350px;
 }
 
 .activities {
