--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ DARK BLUE: #1D3557
 body {
     margin: 0;
     text-align: center;
-    width: max-content;
 }
 
 img {
@@ -44,7 +43,11 @@ h1 {
 }
 
 .activities {
+    border-radius: 0 25px 0 25px;
     color: #251F47;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .guide {
