.activity-sec to flex row center

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,9 @@ h1 {
 }
 
 .activity-sec {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .guide {
