.activity-sec back to block w/margins

--- a/styles.css
+++ b/styles.css
@@ -55,9 +55,8 @@ h1 {
 }
 
 .activity-sec {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    display: block;
+    margin: 10px auto;
 }
 
 .guide {
