--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ h1 {
     margin: 10px auto;
 }
 
-#touch-grass {
+/* #touch-grass {
     display: block;
 }
 
@@ -69,7 +69,7 @@ h1 {
 
 #restaurant-brewery {
     display: block;
-}
+} */
 
 .guide {
     border: 5px dotted navy;
