--- a/styles.css
+++ b/styles.css
@@ -56,10 +56,11 @@ h1 {
 }
 
 .activity-sec {
+    display: inline-block;
     margin: 10px auto;
 }
 
-/* #touch-grass {
+#touch-grass {
     display: block;
 }
 
@@ -69,7 +70,7 @@ h1 {
 
 #restaurant-brewery {
     display: block;
-} */
+}
 
 .guide {
     border: 5px dotted navy;
