--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ h1 {
     margin: 10px auto;
 }
 
-#touch-grass {
+/* #touch-grass {
     display: block;
 }
 
@@ -70,7 +70,7 @@ h1 {
 
 #restaurant-brewery {
     display: block;
-}
+} */
 
 .guide {
     border: 5px dotted navy;
