--- a/styles.css
+++ b/styles.css
@@ -46,15 +46,18 @@ h1 {
 .activities {
     border-radius: 0 25px 0 25px;
     color: #251F47;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #activities-header {
     margin: 10px auto;
 }
 
-.activity-sec {
+/* .activity-sec {
     margin: 10px auto;
-}
+} */
 
 #touch-grass {
     display: inline-block;
