--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ h1 {
     margin: 10px auto;
 }
 
-/* #touch-grass {
+#touch-grass {
     display: block;
     margin: 10px auto;
 }
@@ -74,7 +74,7 @@ h1 {
 #restaurant-brewery {
     display: block;
     margin: 10px auto;
-} */
+}
 
 .guide {
     border: 5px dotted navy;
