--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,8 @@ h1 {
 }
 
 .guide {
+    margin: 10px auto;
     border: 5px dotted navy;
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
 }
