--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,10 @@ h1 {
     border: 5px dotted navy;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .guide-image {
     width: 140px;
     height: 145px;
-    border-radius: 20px 0;
 }
