--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ h1 {
 }
 
 .guide {
-    margin: 10px auto;
+    /* margin: 10px auto; */
     border: 5px dotted navy;
     display: flex;
     flex-direction: row;
@@ -77,6 +77,5 @@ h1 {
 }
 
 .guide-image {
-    width: 140px;
-    height: 145px;
+    border-radius: 0;
 }
