--- a/styles.css
+++ b/styles.css
@@ -69,6 +69,7 @@ h1 {
 
 .guide {
     margin: 10px auto;
+    width: 400px;
     padding: 20px 40px;
     display: flex;
     justify-content: space-around;
