--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ DARK BLUE: #1D3557
 body {
     margin: 0;
     text-align: center;
-    background: linear-gradient(#1D3557 #457B9D);
 }
 
 img {
@@ -87,4 +86,8 @@ h1 {
 #guide-blurb {
     margin: 20px 10px;
     font-style: italic;
+}
+
+a {
+    text-decoration: none;
 }
