--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ h1 {
 }
 
 .beer {
-    background-image: url("./barSign.jpg");
+    background-image: url("./images/barSign.jpg");
 }
 
 a:hover {
