--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ h1 {
     font-style: italic;
 }
 
-.beer {
+#beer {
     width: 100px;
     border-radius: 50px;
     background-image: url(./images/barSign.jpg);
@@ -100,5 +100,7 @@ a:hover {
 }
 
 #beer:hover {
+    width: 100px;
+    border-radius: 50px;
     background-image: url(./images/beer.gif);
 }
