--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,8 @@ a:hover {
     color: #260F26;
 }
 
-#beer:hover {
+/* #beer:hover {
     width: 100px;
     border-radius: 50px;
     background-image: url(./images/beer.gif);
-}
+} */
