--- a/styles.css
+++ b/styles.css
@@ -95,13 +95,12 @@ h1 {
 } */
 
 a:hover {
-    text-decoration: 2px solid #404E7C;
     color: #260F26;
 }
 
 #beer:hover {
     width: 100px;
     border-radius: 50px;
-    background-image: url(./images/beer.gif);
+    background-image: url("./images/beer.gif");
     background-size: cover;
 }
